--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
   --font-primary: 'Poppins', sans-serif;
   --font-secondary: 'Arvo', serif;
   --font-code: 'Roboto', monospace;
-  --bg-color: #267c40;
+  --bg-color: #070807;
   --font-color: #ffffff;
   --btn-bg-color: #ffffff;
   --accent-color: #0d9c44;
